# thyper

./: Cargo.toml  LICENSE  build.rs  readme.md
src/: app.rs  errors.rs  file_io.rs  main.rs  persistence.rs  scoring.rs  widgets.rs  words.rs
src/views/: game.rs  home.rs  mod.rs  options.rs  score.rs
static/: options.json  scores.json
