[package]
name = "typr"
version = "0.1.0"
authors = ["Ross Donohoe <rossdon.95@googlemail.com>"]
repository = "https://github.com/RDO34/thyper"
edition = "2021"
description = "A minimalist typing practice tool in the terminal"
license = "MIT"

[build]
build = "build.rs"

[dependencies]
clap = { version = "=4.5.3", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
dirs = "5.0.1"
rand = "0.8.5"
ratatui = "0.26.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

[build-dependencies]
dirs = "5.0.1"

[[bin]]
name = "thyper"
path = "src/main.rs"

